--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-    <div th:fragment="footer">
-        footer 영역 입니다.
-    </div>
-
+<div class="footer" th:fragment="footer">
+    <footer class="page-footer font-small cyan darken-3">
+        <div class="footer-copyright text-center py-3">
+            2020 Shopping Mall Example WebSite
+        </div>
+    </footer>
+</div>
 </html>
