--- a/src/main/resources/templates/thymeleafEx/thymeleafEx05.html
+++ b/src/main/resources/templates/thymeleafEx/thymeleafEx05.html
@@ -5,8 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>파라미터 전달 예제</h1>
-    <div th:text="${param1}"></div>
-    <div th:text="${param2}"></div>
+<h1>Thymeleaf 링크처리 예제 페이지</h1>
+<div>
+    <a th:href="@{/thymeleaf/ex01}">예제1 페이지 이동</a>
+</div>
+<div>
+    <a th:href="@{https://www.thymeleaf.org/}">thymeleaf 공식 페이지 이동</a>
+</div>
+<div>
+    <a th:href="@{/thymeleaf/ex06(param1 = '파라미터 데이터1', param2 = '파라미터 데이터2')}">thymeleaf 파라미터 전달</a>
+</div>
 </body>
 </html>
