--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="footer" th:fragment="footer">
-    <footer class="page-footer font-small cyan darken-3">
-        <div class="footer-copyright text-center py-3">
-            2020 Shopping Mall Example WebSite
-        </div>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark mt-auto">
+        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; kkongji 2023</p></div>
     </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="/js/scripts.js"></script>
 </div>
 </html>
