--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,14 +3,18 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <div th:fragment="header">
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-light py-md-0" style="background-color: #FFEEDE;">
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/">Shop</a>
-
+        <a class="navbar-brand" href="/">
+            <img src="https://i.pinimg.com/564x/ae/d2/00/aed200c917d42bc252bbbcbb772118e1.jpg" alt="" width="80" height="60">
+            <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -8px">댕</b>
+            <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b></a>
+            <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -1px">월</b>
+            <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">드</b></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item"
@@ -40,6 +44,15 @@
             </form>
         </div>
     </nav>
+
+    <header class="bg-dark py-5">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center text-white">
+                <h1 class="display-4 fw-bolder">댕댕 월드에 오신 것을 환영합니다!</h1>
+                <p class="lead fw-normal text-white-50 mb-0">♥️ 강아지 용품의 모든 것 ♥️</p>
+            </div>
+        </div>
+    </header>
 </div>
 
 </html>
