--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -2,31 +2,53 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-
-    <!-- CSS only -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>댕댕월드</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="/images/puppy.jpg" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link th:href="@{/css/layout1.css}" rel="stylesheet">
-
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        @font-face {
+            font-family: 'DungGeunMo-Regular';
+            src: url('https://cdn.jsdelivr.net/gh/wooin21/web/fonts/etc/DungGeunMo-Regular.woff');
+            font-weight: normal;
+            font-style: normal;
+        }
 
+        body {
+            font-family: 'DungGeunMo-Regular';
+        }
+        .item .card:hover {border: #0D0D0D 1px solid;}
+    </style>
+
+    <!-- 각 페이지의 script가 작성될 위치 -->
     <th:block layout:fragment="script"></th:block>
+    <!-- 각 페이지의 css가 작성될 위치 -->
     <th:block layout:fragment="css"></th:block>
-
 </head>
+
+<style>
+body
+{
+    background-image:url('https://img.freepik.com/free-vector/cute-pattern-with-dog-faces-and-bones_1191-1204.jpg?w=740&t=st=1674197547~exp=1674198147~hmac=a89a865d8c4ad9396fe70275339fb4b7f8aaa2a69e68d3c79cf4d1f2212a84e5')
+}
+</style>
 <body>
 
-    <div th:replace="fragments/header::header"></div>
+<div th:replace="fragments/header::header"></div>
 
-    <div layout:fragment="content" class="content">
+<div layout:fragment="content" class="content"></div>
 
-    </div>
-
-    <div th:replace="fragments/footer::footer"></div>
+<div th:replace="fragments/footer::footer"></div>
 
 </body>
 </html>
