--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -35,9 +35,9 @@
 <div layout:fragment="content">
 
     <div id="carouselControls" class="carousel slide margin" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active item">
-                <img class="d-block w-100 banner" src="https://user-images.githubusercontent.com/13268420/112147492-1ab76200-8c20-11eb-8649-3d2f282c3c02.png" alt="First slide">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center" style="color:#8761F8">
+                <h1 class="display-5 fw-bolder">새로 등록된 상품</h1>
             </div>
         </div>
     </div>
