--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,11 +10,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img src="https://i.pinimg.com/564x/ae/d2/00/aed200c917d42bc252bbbcbb772118e1.jpg" alt="" width="80" height="60">
-            <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -8px">댕</b>
-            <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b></a>
-            <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -1px">월</b>
-            <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">드</b></a>
+            <img src="https://i.pinimg.com/564x/ae/d2/00/aed200c917d42bc252bbbcbb772118e1.jpg" alt="" width="80" height="60" style="margin-left: -5px">
+                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">댕</b>
+                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b></a>
+                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -1px">월</b>
+                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">드</b></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item"
@@ -32,9 +32,12 @@
                     <a class="nav-link" href="/orders">구매이력</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAnonymous()">
-                    <a href="/oauth2/authorization/google" role="button" class="btn btn-outline-danger bi bi-google"> 구글로 로그인</a>
+                    <a href="/oauth2/authorization/google" role="button" class="btn btn-outline-danger bi bi-google" style="margin-left: 15px"> 구글로 로그인</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" href="/members/login">로그인</a>
                 </li>
+                <a sec:authorize="isAuthenticated()" style="font-size: 15px; margin-left: 400px; margin-top:10px;">환영합니다! <span sec:authentication="name"></span>  님</span></a>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/members/logout">로그아웃</a>
                 </li>
@@ -42,7 +45,7 @@
             <form class="form-inline my-2 my-lg-0" th:action="@{/}" method="get">
                 <input name="searchQuery" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    <a sec:authorize="isAuthenticated()">환영합니다. <span sec:authentication="name"></span>님!</span></a>
+
             </form>
         </div>
     </nav>
