--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
                 <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b></a>
                 <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -1px">월</b>
                 <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">드</b></a>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03" style="white-space: nowrap;">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item"
                             sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
@@ -37,7 +37,7 @@
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" href="/members/login">로그인</a>
                 </li>
-                <a sec:authorize="isAuthenticated()" style="font-size: 15px; margin-left: 400px; margin-top:10px;">환영합니다! <span sec:authentication="name"></span>  님</span></a>
+                <a sec:authorize="isAuthenticated()" style="font-size: 15px; margin-left: 400px; margin-top:10px;">환영합니다!<span sec:authentication="name"></span>  님</span></a>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/members/logout">로그아웃</a>
                 </li>
@@ -45,7 +45,6 @@
             <form class="form-inline my-2 my-lg-0" th:action="@{/}" method="get">
                 <input name="searchQuery" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-
             </form>
         </div>
     </nav>
