--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,7 +37,7 @@
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" href="/members/login">로그인</a>
                 </li>
-                <a sec:authorize="isAuthenticated()" style="font-size: 15px; margin-left: 400px; margin-top:10px;">환영합니다!<span sec:authentication="name"></span>  님</span></a>
+                <a sec:authorize="isAuthenticated()" style="font-size: 15px; margin-left: 400px; margin-top:10px;"><span sec:authentication="name"></span>  님</span></a>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/members/logout">로그아웃</a>
                 </li>
