1차 front 수정 작업

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,11 @@
 <div class="footer" th:fragment="footer">
     <!-- Footer-->
     <footer class="py-5 bg-dark mt-auto">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; kkongji 2023</p></div>
+        <div id="body-wrapper">
+            <div id="body-content">
+                <p class="m-0 text-center text-white">Copyright &copy; kkongji 2023</p>
+            </div>
+        </div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
