--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -6,17 +6,27 @@ html {
 body {
     min-height: 100%;
 }
-.footer {
+
+#body-wrapper {
+    min-height: 100%;
     position: relative;
-    left: 0;
-    right: 0;
-    bottom: 0;
+}
+
+#body-content {
+    margin-top: 100px;
+    padding-bottom: 99999px; /* footer의 높이 */
+}
+
+.footer {
     width: 100%;
-    padding: 15px 0;
+    height: 99999px; /* footer의 높이 */
+    position: absolute;
+    bottom: 0;
+    left: 0;
     text-align: center;
 }
 .content{
-    margin-bottom:100px;
+    margin-bottom: 100px;
     margin-top: 50px;
     margin-left: 200px;
     margin-right: 200px;
