--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,10 +29,30 @@
         .center{
             text-align:center;
         }
+        .image-box {
+            width:100%;
+            overflow:hidden;
+            margin:0 auto;
+        }
+        .image-thumbnail {
+            width:100%;
+            height:100%;
+            object-fit:cover;
+        }
     </style>
 </th:block>
 
 <div layout:fragment="content">
+    <header class="py-5">
+        <div class="image-box">
+            <img class="image-thumbnail" src="https://img.freepik.com/free-photo/group-portrait-of-adorable-puppies_53876-64796.jpg?w=1380&t=st=1684482099~exp=1684482699~hmac=a1322b1670caa5f179f31f141b416144906d78f9e5b2e169a10bd9a8e36d1f48">
+            </img>
+                <div class="text-center text-black">
+                    <h1 class="display-4 fw-bolder">댕댕 월드에 오신 것을 환영합니다!</h1>
+                    <p class="lead fw-normal text-black-50 mb-0">♥️ 강아지 용품의 모든 것 ♥️</p>
+                </div>
+        </div>
+    </header>
 
     <div id="carouselControls" class="carousel slide margin" data-ride="carousel">
         <div class="container px-4 px-lg-5 my-5">
