--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -9,6 +9,36 @@
         .fieldError {
             color: #bd2130;
         }
+
+
+        .title {
+            top: 50%;
+            bottom: 50%
+            left: 50%;
+            text-align:center;
+        }
+        body {
+            margin: 0;
+            background-color: #1BBC9B;
+        }
+        .sign-form{
+            /* border: 3px solid red; */
+            border-radius: 5px;
+            height: 550px;
+            width: 400px;
+            background-color: #eeeff1;
+            padding: 50px;
+            margin : 80px auto;
+        }
+        .button {
+            font-size : 14px;
+            color : #fff;
+            padding : 10px;
+            border-radius: 5px;
+            background-color: #1bbc9b;
+            border : none;
+            width : 100%;
+        }
     </style>
 </th:block>
 
@@ -28,31 +58,36 @@
 
 <div layout:fragment="content">
 
-    <form role="form" method="post"  th:object="${memberFormDto}">
+    <form role="form" method="post" th:object="${memberFormDto}">
+      <br></br>
+      <h1 class="title">회원가입</h1>
+      <div class="sign-form">
         <div class="form-group">
             <label th:for="name">이름</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
+            <input type="text" th:field="*{name}"  class="form-control" placeholder="이름을 입력해주세요" style="width:250px;">
             <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
-            <label th:for="email">이메일주소</label>
-            <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요">
+            <label th:for="email">이메일</label>
+            <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요" style="width:250px;">
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
             <label th:for="password">비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력">
+            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
-            <label th:for="address">주소</label>
-            <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요">
+            <label th:for="address">자택 주소</label>
+            <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요" style="width:300px;">
             <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p>
         </div>
+        <br></br>
         <div style="text-align: center">
-            <button type="submit" class="btn btn-primary" style="">Submit</button>
+            <button type="submit" class="btn btn-primary" style="">가입</button>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+      </div>
     </form>
 
 </div>
