--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}">
+      layout:decorate="~{layouts/layout2}">
 
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
@@ -9,27 +9,61 @@
         .error {
             color: #bd2130;
         }
-    </style>
+
+        .title {
+            top: 50%;
+            bottom: 50%
+            left: 50%;
+            text-align:center;
+        }
+        body {
+            margin: 0;
+            background-color: #1BBC9B;
+        }
+        .login-form{
+            /* border: 3px solid red; */
+            border-radius: 5px;
+            height: 350px;
+            width: 400px;
+            background-color: #eeeff1;
+            padding: 50px;
+            margin : 80px auto;
+        }
+        .button {
+            font-size : 14px;
+            color : #fff;
+            padding : 10px;
+            border-radius: 5px;
+            background-color: #1bbc9b;
+            border : none;
+            width : 100%;
+        }
+
+</style>
 </th:block>
 
-<div layout:fragment="content">
-
+<div id="container" layout:fragment="content">
+    <body>
     <form role="form" method="post" action="/members/login">
-        <div class="form-group">
-            <label th:for="email">이메일주소</label>
-            <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
-        </div>
-        <div class="form-group">
-            <label th:for="password">비밀번호</label>
-            <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력">
-        </div>
-        <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-        <button class="btn btn-primary">로그인</button>
-        <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button>
-        <button type="button" class="btn btn-primary" onClick="location.href='/members/newAdmin'">관리자 회원가입</button>
+      <br></br>
+      <h1 class="title">로그인</h1>
+      <div class="login-form">
+            <div class="form-group">
+                <label th:for="email">이메일주소</label>
+                <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요" style="width:250px;">
+            </div>
+            <div class="form-group">
+                <label th:for="password">비밀번호</label>
+                <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
+            </div>
+            <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+                <button type="btn btn-primary">로그인</button>
+                <button type="button" onClick="location.href='/members/new'">회원가입</button>
+                <button type="button" onClick="location.href='/members/newAdmin'">관리자 회원가입</button>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+      </div>
     </form>
-
+    <body>
 </div>
 
 </html>
