2차 front 수정 작업

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,6 +6,7 @@
         <div id="body-wrapper">
             <div id="body-content">
                 <p class="m-0 text-center text-white">Copyright &copy; kkongji 2023</p>
+                <p class="text-center text-white" style="font-size:10px">(본 사이트는 최대 크기 창 화면에 최적화 되어있습니다.)</p>
             </div>
         </div>
     </footer>
