--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -35,9 +35,38 @@
             margin:0 auto;
         }
         .image-thumbnail {
-            width:100%;
-            height:100%;
+            background-image: url('https://png.pngtree.com/background/20210710/original/pngtree-pet-white-hand-painted-pet-shop-puppy-poster-banner-picture-image_1039290.jpg');
+            background-position: center;
+            background-repeat: no-repeat;
+            position: relative;
+            text-align: center;
+            weight: 600px;
+	        height : 500px;
+	        margin: 0px;
+            display: flex;
             object-fit:cover;
+        }
+        .image-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate( -50%, -50% );
+            color: black;
+        }
+        .image-text h1 {
+            font-family: 'Jua', sans-serif;
+            font-size: 6em;
+            text-align: center;
+            color: #F1C164;
+            text-shadow: 5px 5px #2D63A7;
+            margin: 0;
+        }
+        .image-text h4 {
+            font-family: 'Jua', sans-serif;
+            font-size: 1em;
+            color: #f1f1f1;
+            letter-spacing: 5px;
+            text-align: center;
         }
     </style>
 </th:block>
@@ -45,13 +74,16 @@
 <div layout:fragment="content">
     <header class="py-5">
         <div class="image-box">
-            <img class="image-thumbnail" src="https://img.freepik.com/free-photo/group-portrait-of-adorable-puppies_53876-64796.jpg?w=1380&t=st=1684482099~exp=1684482699~hmac=a1322b1670caa5f179f31f141b416144906d78f9e5b2e169a10bd9a8e36d1f48">
-            </img>
-                <div class="text-center text-black">
-                    <h1 class="display-4 fw-bolder">댕댕 월드에 오신 것을 환영합니다!</h1>
-                    <p class="lead fw-normal text-black-50 mb-0">♥️ 강아지 용품의 모든 것 ♥️</p>
-                </div>
+            <div class="image-thumbnail">
+            </div>
+            <div class="image-text" style="text-align:center;">
+                <h1 class="display-4 fw-bolder" style="text-align:center; font-size: calc((120vw / 1240) * 72);">Welcome! <br> 댕댕월드 </h1>
+                <p class="lead fw-normal text-black-50 mb-0" style="text-align:center; font-size: calc((25vw / 1240) * 72);">♥️ 강아지 용품의 모든 것 ♥️</p>
+            </div>
         </div>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+        </style>
     </header>
 
     <div id="carouselControls" class="carousel slide margin" data-ride="carousel">
