회원가입 시 우편번호 찾기 API를 이용하여 주소 찾기 기능 구현

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,11 +19,11 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item"
                             sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                    <a class="nav-link" href="/admin/item/new">상품 등록</a>
+                    <a class="nav-link" style="color:white" href="/admin/item/new">상품 등록</a>
                 </li>
                 <li class="nav-item"
                             sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                    <a class="nav-link" href="/admin/items">상품 관리</a>
+                    <a class="nav-link" style="color:white" href="/admin/items">상품 관리</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" style="color:white" href="/cart">장바구니</a>
