--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -10,22 +10,21 @@
             color: #bd2130;
         }
 
-
         .title {
             top: 50%;
             bottom: 50%
             left: 50%;
-            text-align:center;
+            text-align: center;
         }
         body {
             margin: 0;
             background-color: #1BBC9B;
         }
-        .sign-form{
+        .sign-form {
             /* border: 3px solid red; */
             border-radius: 5px;
             height: 550px;
-            width: 400px;
+            width: 500px;
             background-color: #eeeff1;
             padding: 50px;
             margin : 80px auto;
@@ -52,8 +51,52 @@
                 alert(errorMessage);
             }
         });
-    </script>
 
+        function execPostCode() {
+         new daum.Postcode({
+             oncomplete: function(data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                // 도로명 주소의 노출 규칙에 따라 주소를 조합한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var fullRoadAddr = data.roadAddress; // 도로명 주소 변수
+                var extraRoadAddr = ''; // 도로명 조합형 주소 변수
+
+                // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                    extraRoadAddr += data.bname;
+                }
+                // 건물명이 있고, 공동주택일 경우 추가한다.
+                if(data.buildingName !== '' && data.apartment === 'Y'){
+                   extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                }
+                // 도로명, 지번 조합형 주소가 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                if(extraRoadAddr !== ''){
+                    extraRoadAddr = ' (' + extraRoadAddr + ')';
+                }
+                // 도로명, 지번 주소의 유무에 따라 해당 조합형 주소를 추가한다.
+                if(fullRoadAddr !== ''){
+                    fullRoadAddr += extraRoadAddr;
+                }
+
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                console.log(data.zonecode);
+                console.log(fullRoadAddr);
+
+
+                $("[name=zipcode]").val(data.zonecode);
+                $("[name=streetadr]").val(fullRoadAddr);
+
+                /* document.getElementById('signUpUserPostNo').value = data.zonecode; //5자리 새우편번호 사용
+                document.getElementById('signUpUserCompanyAddress').value = fullRoadAddr;
+                document.getElementById('signUpUserCompanyAddressDetail').value = data.jibunAddress; */
+            }
+         }).open();
+     }
+
+    </script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </th:block>
 
 <div layout:fragment="content">
@@ -64,12 +107,12 @@
       <div class="sign-form">
         <div class="form-group">
             <label th:for="name">이름</label>
-            <input type="text" th:field="*{name}"  class="form-control" placeholder="이름을 입력해주세요" style="width:250px;">
+            <input type="text" th:field="*{name}"  class="form-control" placeholder="이름을 입력하세요" style="width:250px;">
             <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
             <label th:for="email">이메일</label>
-            <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력해주세요" style="width:250px;">
+            <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력하세요" style="width:250px;">
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
@@ -78,15 +121,25 @@
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
         </div>
         <div class="form-group">
-            <label th:for="address">자택 주소</label>
-            <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요" style="width:300px;">
-            <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p>
+            <label th:for="zipcode">우편번호</label>
+            <input type="text" name="addr1" id="addr1" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력하세요" style="width:200px;" readonly>
+            <input type="button" onclick="execPostCode()" style="float:right; margin-right:50px; margin-top: -35px" value="우편번호 찾기"><br>
         </div>
+        <div class="form-group">
+            <input type="text" name="addr2" id="addr2" th:field="*{streetadr}" class="form-control" style="margin-top: -30px" placeholder="도로명 주소를 입력하세요" readonly>
+        </div>
+        <div class="form-group">
+            <label th:for="detailAdr">상세 주소</label>
+            <input type="text" class="form-control" name="addr3" id="addr3" th:field="*{detailadr}" placeholder="상세 주소를 입력하세요">
+        </div>
+
         <br></br>
         <div style="text-align: center">
             <button type="submit" class="btn btn-primary" style="">가입</button>
         </div>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        </div>
       </div>
     </form>
 
