--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -138,7 +138,7 @@
     </style>
 </th:block>
 
-<div layout:fragment="content" style="margin-left:25%;margin-right:25%">
+<div layout:fragment="content" style="margin-left:25%; margin-right:25%; margin-top:5%; margin-bottom:5%">
 
     <input type="hidden" id="itemId" th:value="${item.id}">
 
