--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:text-align="http://www.w3.org/1999/xhtml"
       layout:decorate="~{layouts/layout1}">
 
 <!-- 사용자 스크립트 추가 -->
@@ -48,6 +48,20 @@
         .fieldError {
             color: #bd2130;
         }
+        .item-form {
+           /* border: 3px solid red; */
+           border-radius: 5px;
+           height: 750px;
+           width: 600px;
+           background-color: #eeeff1;
+           padding: 50px;
+           margin : 100px auto;
+        }
+        .h1 {
+            text-align: center;
+            height: 10px;
+            margin: 20px;
+        }
     </style>
 </th:block>
 
@@ -55,28 +69,28 @@
 
     <form role="form" method="post" enctype="multipart/form-data" th:object="${itemFormDto}">
 
-        <p class="h2">
+        <p class="h1">
             상품 등록
         </p>
-
+     <div class="item-form">
         <input type="hidden" th:field="*{id}">
 
         <div class="form-group">
-            <select th:field="*{itemSellStatus}" class="custom-select">
+            <select th:field="*{itemSellStatus}" class="custom-select" style="width:250px;">
                 <option value="SELL">판매중</option>
                 <option value="SOLD_OUT">품절</option>
             </select>
         </div>
 
-        <div class="input-group">
+        <div class="input-group" style="width:350px;">
             <div class="input-group-prepend">
-                <span class="input-group-text">상품명</span>
+                <span class="input-group-text" >상품명</span>
             </div>
-            <input type="text" th:field="*{itemNm}" class="form-control" placeholder="상품명을 입력해주세요">
+            <input type="text" th:field="*{itemNm}" class="form-control" placeholder="상품명을 입력해주세요" >
         </div>
         <p th:if="${#fields.hasErrors('itemNm')}" th:errors="*{itemNm}" class="fieldError">Incorrect data</p>
 
-        <div class="input-group">
+        <div class="input-group" style="width:350px;">
             <div class="input-group-prepend">
                 <span class="input-group-text">가격</span>
             </div>
@@ -84,7 +98,7 @@
         </div>
         <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="fieldError">Incorrect data</p>
 
-        <div class="input-group">
+        <div class="input-group" style="width:350px;">
             <div class="input-group-prepend">
                 <span class="input-group-text">재고</span>
             </div>
@@ -92,9 +106,9 @@
         </div>
         <p th:if="${#fields.hasErrors('stockNumber')}" th:errors="*{stockNumber}" class="fieldError">Incorrect data</p>
 
-        <div class="input-group">
+        <div class="input-group" style="width:500px;">
             <div class="input-group-prepend">
-                <span class="input-group-text">상품 상세 내용</span>
+                <span class="input-group-text" >상품 상세 내용</span>
             </div>
             <textarea class="form-control" aria-label="With textarea" th:field="*{itemDetail}"></textarea>
         </div>
@@ -102,7 +116,7 @@
 
         <div th:if="${#lists.isEmpty(itemFormDto.itemImgDtoList)}">
             <div class="form-group" th:each="num: ${#numbers.sequence(1,5)}">
-                <div class="custom-file img-div">
+                <div class="custom-file img-div" style="width:400px;">
                     <input type="file" class="custom-file-input" name="itemImgFile">
                     <label class="custom-file-label" th:text="상품이미지 + ${num}"></label>
                 </div>
@@ -120,13 +134,13 @@
         </div>
 
         <div th:if="${#strings.isEmpty(itemFormDto.id)}" style="text-align: center">
-            <button th:formaction="@{/admin/item/new}" type="submit" class="btn btn-primary">저장</button>
+            <button th:formaction="@{/admin/item/new}" type="submit" class="btn btn-primary">등록</button>
         </div>
         <div th:unless="${#strings.isEmpty(itemFormDto.id)}" style="text-align: center">
             <button th:formaction="@{'/admin/item/' + ${itemFormDto.id} }" type="submit" class="btn btn-primary">수정</button>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-
+     </div>
     </form>
 
 </div>
