--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -26,8 +26,19 @@
 
         body {
             font-family: 'DungGeunMo-Regular';
+            height: 100%;
+            background-image:url('https://img.freepik.com/free-vector/cute-pattern-with-dog-faces-and-bones_1191-1204.jpg?w=740&t=st=1674197547~exp=1674198147~hmac=a89a865d8c4ad9396fe70275339fb4b7f8aaa2a69e68d3c79cf4d1f2212a84e5')
         }
-        .item .card:hover {border: #0D0D0D 1px solid;}
+        .item .card:hover {border: #0D0D0D 1px solid;
+        #wrap{
+	        min-height: calc(100vh - 10rem); /* footer 높이를 빼준다. */
+	    }
+        footer{
+	        height: 10rem; /* footer 높이 */
+	        position : relative;
+            transform : translateY(-100%);
+	    }
+
     </style>
 
     <!-- 각 페이지의 script가 작성될 위치 -->
@@ -36,19 +47,13 @@
     <th:block layout:fragment="css"></th:block>
 </head>
 
-<style>
-body
-{
-    background-image:url('https://img.freepik.com/free-vector/cute-pattern-with-dog-faces-and-bones_1191-1204.jpg?w=740&t=st=1674197547~exp=1674198147~hmac=a89a865d8c4ad9396fe70275339fb4b7f8aaa2a69e68d3c79cf4d1f2212a84e5')
-}
-</style>
 <body>
 
 <div th:replace="fragments/header::header"></div>
 
 <div layout:fragment="content" class="content"></div>
 
-<div th:replace="fragments/footer::footer"></div>
+<div id="footer" th:replace="fragments/footer::footer"></div>
 
 </body>
 </html>
