--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,15 +37,14 @@
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" style="color:white" href="/members/login">로그인</a>
                 </li>
-                <a sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-left: 470px; margin-top:10px;"><span sec:authentication="name"></span>  님</span></a>
+                <li class="nav-item">
+                    <a sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:50px; margin-top:10px"><span sec:authentication="name" style="color:white; font-size: 15px; margin-left:600px; margin-top:10px">
+                    </span>  님</span></a>
+                </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" style="color:orange" href="/members/logout">로그아웃</a>
+                    <a class="nav-link" style="color:orange;" href="/members/logout">로그아웃</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" th:action="@{/}" method="get">
-                <input name="searchQuery" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
 </div>
