--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -55,7 +55,7 @@
                 <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
             </div>
             <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-            <button type="btn btn-primary">로그인</button>
+            <button type="btn btn-primary" style="margin-top:20px">로그인</button>
             <button type="button" onClick="location.href='/members/new'">회원가입</button>
             <button type="button" onClick="location.href='/members/newAdmin'">관리자 회원가입</button>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
