--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,8 +38,8 @@
                     <a class="nav-link" style="color:white" href="/members/login">로그인</a>
                 </li>
                 <li class="nav-item">
-                    <a sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:50px; margin-top:10px"><span sec:authentication="name" style="color:white; font-size: 15px; margin-left:600px; margin-top:10px">
-                    </span>  님</span></a>
+                    <a sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:5px;"><span sec:authentication="name" style="display:inline-block; color:white; height:15px; font-size: 15px; margin-left:650px; padding:8px">
+                    </span> 님</span></a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" style="color:orange;" href="/members/logout">로그아웃</a>
