--- a/src/main/resources/templates/mypage/formMemberMyInfo.html
+++ b/src/main/resources/templates/mypage/formMemberMyInfo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml"
+      xmlns="http://www.w3.org/1999/html"
       layout:decorate="~{layouts/layout1}">
 
 <!-- 사용자 CSS 추가 -->
@@ -22,7 +23,7 @@
         .sign-form {
             /* border: 3px solid red; */
             border-radius: 5px;
-            height: 700px;
+            height: 800px;
             width: 500px;
             background-color: #eeeff1;
             padding: 50px;
@@ -42,9 +43,6 @@
 
 <th:block layout:fragment="script">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript">
-
-    </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </th:block>
 
@@ -63,12 +61,17 @@
             <input type="text" th:value="${member.email}" id="email" class="form-control" style="width:250px;" disabled>
         </div>
         <div class="form-group">
+            <label th:for="password">비밀번호</label>
+            <input type="password" th:value="${member.originalpassword}" id="password" class="form-control" style="width:250px;" disabled>
+        </div>
+        <div class="form-group">
             <label th:for="name">이름</label>
             <input type="text" th:value="${member.name}" id="name" class="form-control" style="width:250px;" readonly>
         </div>
         <div class="form-group">
             <label th:for="name">회원</label>
-            <h5 th:text="일반회원" id="role" class="form-control" style="width:250px;" readonly></h5>
+            <h5 th:text="일반회원" th:if="${#strings.equals(member.role, 'USER')}"  id="role1" class="form-control" style="width:250px;" readonly></h5>
+            <h5 th:text="관리자" th:if="${#strings.equals(member.role, 'ADMIN')}"  id="role2" class="form-control" style="width:250px;" readonly></h5>
         </div>
         <br>
         <div class="form-group">
@@ -88,7 +91,6 @@
             <button type="button" onclick="location.href='/'">홈으로</button>
         </div>
         <br></br>
-
         <div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         </div>
