--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,11 +10,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img src="https://cdn-icons-png.flaticon.com/128/9909/9909238.png" alt="" width="80" height="60" style="margin-left: -5px">
+            <img src="https://cdn-icons-png.flaticon.com/128/8410/8410114.png" alt="" width="80" height="70" style="margin-left: -5px; margin-right: 3px; margin-bottom:5px;">
                 <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">댕</b>
                 <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b></a>
                 <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -1px">월</b>
-                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">드</b></a>
+                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: 10px">드</b></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03" style="white-space: nowrap;">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item"
