로그인 폼 인터페이스 개선

--- a/src/main/resources/templates/member/findMemberForm.html
+++ b/src/main/resources/templates/member/findMemberForm.html
@@ -29,7 +29,7 @@
             margin : 80px auto;
         }
         .button_container {
-            position: absolute;
+            position: sticky;
             left: 0;
             right: 0;
             top: 60%;
@@ -68,16 +68,13 @@
           -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
           transform: translateX(-98%) translateY(-25%) rotate(45deg);
         }
-
         .button:hover:after {
           -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
           transform: translateX(-9%) translateY(-25%) rotate(45deg);
         }
-
         .span {
              margin-top: 70px;
         }
-
         .forget {
             position: absolute;
             left: 50%;
@@ -85,12 +82,10 @@
             transform: translate(-50%, -50%);
             text-align: center;
         }
-
         .link {
           font-size: 20px;
           margin-top: 30px;
         }
-
         .link a {
           color: #000;
           font-size: 25px;
