--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,7 @@
             <img src="https://cdn-icons-png.flaticon.com/128/8410/8410114.png" alt="" width="80" height="70" style="margin-left: -5px; margin-right: 3px; margin-bottom:5px;">
                 <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">댕</b>
                 <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b></a>
-                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -1px">월</b>
+                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">월</b>
                 <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: 10px">드</b></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03" style="white-space: nowrap;">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -30,9 +30,6 @@
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" style="color:white" href="/orders">구매이력</a>
-                </li>
-                <li class="nav-item" sec:authorize="isAnonymous()">
-                    <a href="/oauth2/authorization/google" role="button" class="btn btn-outline-danger bi bi-google" style="margin-left: 15px">구글로 로그인</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" style="color:white" href="/members/login">로그인</a>
