--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml"
       layout:decorate="~{layouts/layout2}">
 
 <!-- 사용자 CSS 추가 -->
@@ -17,22 +17,31 @@
         }
         body {
             margin: 0
-
         }
         .login-form{
             /* border: 3px solid red; */
             border-radius: 5px;
-            height: 600px;
+            height: 700px;
             width: 400px;
             background-color: #eeeff1;
             padding: 50px;
             margin : 80px auto;
         }
         .button_container {
-            position: absolute;
+            position: sticky;
             left: 0;
             right: 0;
-            top: 68%;
+            width: 100%;
+            height: 60%;
+            top: 80%;
+        }
+        .sns_button_container {
+            position: sticky;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            top: 50%;
         }
         .button {
           border: none;
@@ -68,32 +77,89 @@
           -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
           transform: translateX(-98%) translateY(-25%) rotate(45deg);
         }
-
         .button:hover:after {
           -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
           transform: translateX(-9%) translateY(-25%) rotate(45deg);
         }
-
         .span {
              margin-top: 70px;
         }
-
+        .social-button {
+            top: 20px;
+            width: 230px;
+            height: 55px;
+            background-position: 25px 0px;
+            transform: translate(15%, -200%);
+            box-sizing: border-box;
+            color: rgb(255, 255, 255);
+            cursor: pointer;
+            display: inline-block;
+            line-height: 50px;
+            text-decoration: none;
+            vertical-align: middle;
+            margin: 10px auto;
+            outline: rgb(255, 255, 255) none 0px;
+            padding-left: 20%;
+            transition: all 0.2s cubic-bezier(0.72, 0.01, 0.56, 1) 0s;
+            -webkit-transition: all .3s ease;
+            -moz-transition: all .3s ease;
+            -ms-transition: all .3s ease;
+            -o-transition: all .3s ease;
+            transition: all .3s ease;
+        }
+        #google-connect {
+            background: rgb(220, 74, 61) url('https://raw.githubusercontent.com/eswarasai/social-login/master/img/google-plus-white.png') no-repeat scroll 5px 0px / 50px 50px padding-box border-box;
+            border: 1px solid rgb(220, 74, 61);
+        }
+        #google-connect span {
+            background: rgb(220, 74, 61);
+            box-sizing: border-box;
+            color: white;
+            cursor: pointer;
+            right: 10%;
+            border: 0px none rgb(220, 74, 61);
+            outline: rgb(255, 255, 255) none 0px;
+            -webkit-transition: all .3s ease;
+            -moz-transition: all .3s ease;
+            -ms-transition: all .3s ease;
+            -o-transition: all .3s ease;
+            transition: all .3s ease;
+        }
         .forget {
-            position: absolute;
-            left: 50%;
-            top: 107%;
-            transform: translate(-50%, -50%);
-            text-align: center;
+           width: 100px;
+           height: 100px;
+           position: sticky;
+           left: 41%;
+           text-align: center;
         }
-
         .link {
-          font-size: 20px;
-          margin-top: 30px;
+           font-size: 20px;
+           margin-top: 30px;
         }
-
         .link a {
           color: #000;
           font-size: 25px;
+        }
+        .divider {
+          position: sticky;
+          width: 100%;
+          margin-top: -750px;
+        }
+        .divider::after{
+          content: "";
+          height: 1px;
+          width: 100%;
+          background-color: #C2C7D0;
+          position: absolute;
+          top: 9px;
+          left: 0;
+        }
+        .divider span {
+          padding: 5 10px;
+          text-align: center;
+          background-color: #eeeff1;
+          z-index: 2;
+          position: relative;
         }
 </style>
 </th:block>
@@ -113,18 +179,25 @@
                 <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
             </div>
             <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+            <br>
+            <a href="#" onclick="location.href='/members/findMember'" class="forget" style="color:red;">비밀번호를 잊어버리셨다면? Click!</a>
         <div class="button_container">
             <button type="submit" class="button" style="margin-top:20px">&nbsp;&nbsp;&nbsp;&nbsp;로그인&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
             <br>
-            <button type="button" class="button" onClick="location.href='/members/new'">&nbsp;&nbsp;&nbsp;&nbsp;회원가입&nbsp;&nbsp;&nbsp;</button>
-            <br>
-            <button type="button" class="button" onClick="location.href='/members/newAdmin'">관리자 회원가입</button>
+            <button type="button" class="button" onClick="location.href='/members/select'">&nbsp;&nbsp;&nbsp;&nbsp;회원가입&nbsp;&nbsp;&nbsp;</button>
             <br>
         </div>
+        <div class="sns_button_container">
+            <a href="/oauth2/authorization/google" role="button" class="social-button" id="google-connect"><span>&nbsp;&nbsp;구글로 로그인</span></a>
+        </div>
+        <div class="divider" style="text-align:center; font-size:17px; padding:-10px;">
+            <span>&nbsp;&nbsp;Or Social&nbsp;&nbsp;</span>
+        </div>
+        <div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </div>
+        </div>
     </form>
-        <a href="#" onclick="location.href='/members/findMember'" class="forget" style="color:red; text-align:center">Oops! 비밀번호를 잊어버리셨나요?</a>
     </body>
 </div>
 
