--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -200,7 +200,7 @@
       <body>
 
         <br></br>
-        <h1 class="title">회원가입</h1>
+        <h1 class="title" style="margin-top:40px">회원가입</h1>
         <div class="sign-form">
             <div class="form-group">
                 <label th:for="name">이름</label>
