--- a/src/main/resources/templates/mypage/oauthMemberMyInfo.html
+++ b/src/main/resources/templates/mypage/oauthMemberMyInfo.html
@@ -55,7 +55,7 @@
 <div layout:fragment="content">
   <form>
     <br></br>
-    <h1 class="title">나의 정보</h1>
+    <h1 class="title" style="margin-top:40px">나의 정보</h1>
       <input type="hidden" th:value="${member.id}" id="id">
       <div class="sign-form">
         <div class="form-group">
