--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,18 +3,19 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <div th:fragment="header">
-    <nav class="navbar navbar-expand-sm navbar-light py-md-0" style="background-color: #343A40;">
+    <nav class="navbar navbar-expand-sm navbar-light py-md-0" style="background-color: #343A40; margin-bottom:-50px;">
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img src="https://cdn-icons-png.flaticon.com/128/8410/8410114.png" alt="" width="80" height="70" style="margin-left: -5px; margin-right: 3px; margin-bottom:5px;">
+            <img src="https://cdn-icons-png.flaticon.com/128/4966/4966345.png" alt="" width="40" style="margin-left: 10px; margin-right: -8px;">
                 <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">댕</b>
-                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b></a>
+                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b>
                 <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">월</b>
-                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: 10px">드</b></a>
+                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: 5px">드</b>
+        </a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03" style="white-space: nowrap;">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item"
@@ -26,24 +27,23 @@
                     <a class="nav-link" style="color:white" href="/admin/items">상품 관리</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" style="color:white" href="/cart">장바구니</a>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" style="color:white" href="/orders">구매이력</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" style="color:white" href="/members/login">로그인</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" style="color:white" href="/members/myInfo">마이페이지 </a>
-                </li>
-                <li class="nav-item">
-                    <a sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:5px;"><span sec:authentication="name" style="display:inline-block; color:white; height:15px; font-size: 15px; margin-left:500px; padding:8px">
+                    <a sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:5px;"><span sec:authentication="name" style="display:inline-block; color:white; height:15px; font-size: 15px; margin-left:550px; padding:8px">
                     </span> 님</span></a>
                     <span sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:5px;">
                     </span>
                 </li>
-
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" style="color:white" href="/cart">장바구니</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="isAuthenticated()" style="color:white" href="/members/myInfo">마이페이지 </a>
+                </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" style="color:orange;" href="/members/logout">로그아웃</a>
                 </li>
