--- a/src/main/resources/templates/member/findMemberForm.html
+++ b/src/main/resources/templates/member/findMemberForm.html
@@ -132,7 +132,7 @@
   <body>
   <form role="form" class="text-start" method="post" name="sendEmail" action="/members/sendEmail">
     <br></br>
-    <h1 class="title">비밀번호 찾기</h1>
+    <h1 class="title" style="margin-top:40px">비밀번호 찾기</h1>
     <div class="login-form">
       <div class="form-group">
         <input type="email" id="email" name="memberEmail" class="form-control" placeholder="회원가입시 입력했던 이메일을 입력하세요." style="width:400px; margin-left:50px; margin-top:40px;" required>
@@ -143,7 +143,7 @@
         <button type="button" id="checkEmail" class="button" style="margin-top:20px">&nbsp;&nbsp;비밀번호 발송&nbsp;&nbsp;</button>
         <br>
       </div>
-      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
     </div>
   </form>
   </body>
