--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -10,10 +10,10 @@
             color: #bd2130;
         }
         .title {
-            top: 50%;
+            top: 60%;
             bottom: 50%
             left: 50%;
-            text-align:center;
+            text-align: center;
         }
         body {
             margin: 0
@@ -168,7 +168,7 @@
     <body>
     <form role="form" method="post" action="/members/login">
         <br></br>
-        <h1 class="title">로그인</h1>
+        <h1 class="title" style="margin-top:40px">로그인</h1>
         <div class="login-form">
             <div class="form-group">
                 <label th:for="email">이메일주소</label>
@@ -194,7 +194,7 @@
             <span>&nbsp;&nbsp;Or Social&nbsp;&nbsp;</span>
         </div>
         <div>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf?.token}"/>
         </div>
         </div>
     </form>
